--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 amqp==5.1.1
 asgiref==3.6.0
+beautifulsoup4==4.12.2
 billiard==3.6.4.0
 celery==5.2.7
 certifi==2023.5.7
@@ -10,6 +11,7 @@ click-plugins==1.1.1
 click-repl==0.2.0
 cron-descriptor==1.3.0
 Django==4.2.1
+django-bootstrap-v5==1.0.11
 django-celery-beat==2.5.0
 django-timezone-field==5.0
 exceptiongroup==1.1.1
@@ -23,11 +25,13 @@ pytest==7.3.1
 pytest-django==4.5.2
 python-crontab==2.7.1
 python-dateutil==2.8.2
+python-dotenv==1.0.0
 pytz==2023.3
 PyYAML==6.0
 requests==2.30.0
 responses==0.23.1
 six==1.16.0
+soupsieve==2.4.1
 sqlparse==0.4.4
 tomli==2.0.1
 types-PyYAML==6.0.12.9
